frame/support/test/tests/benchmark_ui/invalid_use_of_question_op.stderr
error: The `?` operator can only be used in benchmark functions that specify `Result<(), BenchmarkError>`as their return type
  --> tests/benchmark_ui/invalid_use_of_question_op.rs:15:14
   |
15 |         something()?;
   |                    ^
